@@ -1,3 +1,8 @@
+2000-08-23  Kevin Buettner  <kevinb@redhat.com>
+
+	* dstread.c (dst_symfile_offsets): Protoize.
+	* fork-child.c (fork_inferior): Protoize.
+
 2000-08-21  Kevin Buettner  <kevinb@redhat.com>
 
 	* dbxread (dbx_symfile_read, process_later): Protoize.
